fix not centered div

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -142,6 +142,7 @@
     height: 100%;
     cursor: pointer;
     margin-top: 10px;
+    z-index: 1002;
 }
 
 .navbar-mobile-hamburger-image:hover{
