--- a/src/pages/ForgotPassword/style.scss
+++ b/src/pages/ForgotPassword/style.scss
@@ -1,19 +1,23 @@
 // MAIN STYLES //
 .forgot-password-container{
-    min-height: 100%;
-    min-width: 100%;
-    padding-bottom: 10vh;
-    padding-top: 5vw;
+    min-height: 100vh;
+    min-width: 100vw;
+    display: flex;
+    position: relative;
+    top: -80px;
 }
 
 .forgot-password-wrapper{
     width: 40vw;
     margin: 0px auto;
     position: relative;
+    align-self: center;
     align-items: flex-start;
+    justify-self: center;
     -webkit-box-align: center;
     display: flex;
     flex-direction: column;
+    
     @media screen and (max-width: 1280px){
         width: 60vw;
     }
